# gitdex

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
gitdex/: cli.py  mainFile.py
